--- a/dom-and-events/exercises/style.css
+++ b/dom-and-events/exercises/style.css
@@ -1,3 +1,14 @@
 h1 {
   text-decoration: underline;
 }
+  #shuttleBackground
+  {
+    height: 300px;
+    width: 500px;
+  }
+  #rocket
+  {
+    bottom: 0;
+    right: 250px;
+  }
+
