--- a/dom-and-events/studio/styles.css
+++ b/dom-and-events/studio/styles.css
@@ -1,8 +1,8 @@
 #shuttleBackground {
     background-color: green;
     display: inline-block;
-    height: 80%;
-    width: 40%;
+    height: 300px;
+    width: 500px;
     position: relative;
 }
 
@@ -27,4 +27,10 @@
 
 .centered {
     text-align: center;
+}
+
+#rocket
+{
+    position: relative;
+    bottom: -220px;
 }
